# Neat-Reader

./: .gitignore  .npmrc  INSTALL_RUST.md  PROXY_README.md  README.md  README_QWEN_FEATURES.md  REBUILD_REQUIRED.md  SETUP_GUIDE.md  TAURI-DEV-GUIDE.md  TAURI-QUICK-START.md  TAURI_BUILD_GUIDE.md  TAURI_MIGRATION_STATUS.md  app.go  backend-x86_64-pc-windows-msvc.spec  build-tauri.bat  build_tauri.bat  check-build.bat  debug-electron-crashes.md  electron-builder.json  electron-performance-report.json  electron-performance-report.md  index.html  install-marked.bat  install-tauri-deps.bat  install.bat  install.sh  package-lock.json  package.json  package.json.server  pageindex-cross-book-evaluation.md  pageindex-retrieval-logic.md  rebuild.bat  server.js  start-tauri-dev.bat  start.bat  start_backend.bat  start_frontend.bat  start_tauri.bat  start_with_migration.bat  vite.config.ts  (+2 more)
src-tauri/: .gitignore  BAIDU-API-IMPLEMENTATION.md  Cargo.toml  FILE-SYSTEM-COMMANDS.md  IMPLEMENTATION-SUMMARY.md  OAUTH-IMPLEMENTATION.md  OAUTH-MIGRATION-SUMMARY.md  OPEN-FILE-IMPLEMENTATION.md  QWEN-API-IMPLEMENTATION.md  QWEN-API-MIGRATION-GUIDE.md  README.md  TAURI-CONFIG-DOCUMENTATION.md  TAURI-CONFIG-QUICK-REFERENCE.md  TAURI-CONFIG-VALIDATION.md  TOKEN-STORAGE-IMPLEMENTATION.md  TOKEN-STORAGE-QUICK-START.md  TOKEN-STORAGE-SUMMARY.md  TTS-API-IMPLEMENTATION.md  WRITE-FILE-IMPLEMENTATION.md  tauri.conf.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: error.rs  main.rs
src-tauri/tests/: OAUTH_VERIFICATION_RESULTS.md  OAUTH_VERIFICATION_SUMMARY.md  baidu_oauth_verification.md  (+3 more)
(+243 files in other folders)
